--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <FrameLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -19,43 +20,54 @@
             android:layout_gravity="start"
             android:foreground="?attr/selectableItemBackground"
             android:src="@drawable/menu_24"
-            android:backgroundTint="@color/white"/>
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="end">
-            <ImageButton
-                android:id="@+id/gridBtn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="start"
-                android:foreground="?attr/selectableItemBackground"
-                android:src="@drawable/grid_view_24"
-                android:backgroundTint="@color/white"
-                android:layout_marginEnd="10dp"/>
-            <ImageButton
-                android:id="@+id/columnBtn"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="start"
-                android:foreground="?attr/selectableItemBackground"
-                android:src="@drawable/table_rows_24"
-                android:backgroundTint="@color/white"/>
-        </LinearLayout>
+            android:background="@null"/>
+        <ImageButton
+            android:id="@+id/settingsBtn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="end"
+            android:foreground="?attr/selectableItemBackground"
+            android:src="@drawable/round_settings"
+            android:background="@null"/>
     </FrameLayout>
 
-    <Button
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="vertical"
+        android:layout_marginHorizontal="30dp">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/round_search"
+            android:layout_marginBottom="10dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="У вас пока нет заметок. Создайте с помощью нижней кнопки"
+            android:textSize="20sp"/>
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="80dp"
+        app:layout_constraintTop_toBottomOf="@+id/appBar"/>
+
+    <ImageButton
         android:id="@+id/createTask"
         android:layout_width="60dp"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="+"
-        android:textSize="35sp"
-        app:cornerRadius="30dp"
-        android:padding="0dp"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:backgroundTint="@color/blue"/>
+        android:src="@drawable/add"
+        android:background="@drawable/roundcorner"
+        android:foreground="?attr/selectableItemBackground"
+        android:layout_margin="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
