--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,9 @@
     <color name="red">#E10707</color>
     <color name="yellow">#EDB200</color>
     <color name="green">#228507</color>
-    <color name="night">#272727</color>
+    <color name="back_night">#191919</color>
+    <color name="back_day">#F3F3F3</color>
+    <color name="gray">#686868</color>
+    <color name="text_day">#353535</color>
+    <color name="container">#1E1E1E</color>
 </resources>
