--- a/app/src/main/res/layout/task_card.xml
+++ b/app/src/main/res/layout/task_card.xml
@@ -15,6 +15,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:buttonTint="@color/white"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +63,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="55dp"
             android:layout_marginEnd="92dp"/>
 
         <TextView
@@ -69,7 +77,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
-            android:layout_marginStart="5dp"/>
+            android:layout_marginStart="55dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
