--- a/app/src/main/res/layout/task_card.xml
+++ b/app/src/main/res/layout/task_card.xml
@@ -16,6 +16,7 @@
         android:layout_height="match_parent">
 
         <CheckBox
+            android:id="@+id/isCompl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,6 +31,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
+                android:id="@+id/third_prior"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/star_outline"
@@ -37,6 +39,7 @@
                 android:layout_marginEnd="5dp"/>
 
             <ImageView
+                android:id="@+id/second_prior"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/star"
@@ -44,6 +47,7 @@
                 android:layout_marginEnd="5dp"/>
 
             <ImageView
+                android:id="@+id/first_prior"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/star"
@@ -67,7 +71,7 @@
             android:layout_marginEnd="92dp"/>
 
         <TextView
-            android:id="@+id/subhead"
+            android:id="@+id/desc"
             style="@style/TextAppearance.MaterialComponents.Subtitle2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
