--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,6 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_gravity="start"
-                android:contentDescription="TODO"
                 android:foreground="?attr/selectableItemBackground"
                 android:background="@drawable/menu_24"
                 android:backgroundTint="?attr/colorPrimaryVariant"/>
@@ -34,13 +33,13 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:layout_gravity="end"
-                android:contentDescription="TODO"
                 android:foreground="?attr/selectableItemBackground"
                 android:src="@drawable/round_settings"
                 android:background="@null"/>
         </FrameLayout>
 
         <LinearLayout
+            android:id="@+id/start_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -50,7 +49,6 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:contentDescription="TODO"
                 android:src="@drawable/round_search"
                 android:layout_marginBottom="10dp"/>
             <TextView
@@ -76,7 +74,6 @@
             android:id="@+id/addTask"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:contentDescription="TODO"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/add"
