--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -19,17 +19,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <View
+                android:id="@+id/colorTask"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/rounded_rect"
                 android:layout_marginEnd="10dp"
-                android:backgroundTint="@color/green"/>
+                android:backgroundTint="@color/blue"/>
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Title"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="?attr/colorPrimaryVariant"/>
@@ -40,33 +40,36 @@
             android:orientation="horizontal"
             android:layout_marginVertical="15dp">
             <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/star_outline"
-                android:backgroundTint="@color/blue"/>
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:background="@drawable/star_outline"
-                android:backgroundTint="@color/blue"/>
-            <ImageView
+                android:id="@+id/first_prior"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/star"
+                android:backgroundTint="@color/blue"/>
+            <ImageView
+                android:id="@+id/second_prior"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/star_outline"
+                android:backgroundTint="@color/blue"/>
+            <ImageView
+                android:id="@+id/third_prior"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/star_outline"
                 android:backgroundTint="@color/blue"/>
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Description"
+            android:text="@string/description_task_text"
             android:textSize="22sp"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"
             android:textColor="?attr/colorPrimaryVariant"/>
         <TextView
+            android:id="@+id/desc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Text"
             android:textSize="20sp"
             android:layout_marginBottom="10dp"
             android:textColor="?attr/colorPrimaryVariant"/>
