--- a/app/src/main/res/layout/task_card.xml
+++ b/app/src/main/res/layout/task_card.xml
@@ -6,9 +6,11 @@
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
-    android:backgroundTint="@color/green"
     app:cardCornerRadius="10dp"
-    android:layout_marginVertical="5dp">
+    android:layout_marginVertical="5dp"
+    android:id="@+id/card"
+    app:cardBackgroundColor="@color/blue"
+    android:backgroundTint="@null">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:padding="4dp"
@@ -35,16 +37,14 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/star_outline"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:layout_marginTop="5dp"/>
 
             <ImageView
                 android:id="@+id/second_prior"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/star"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"/>
+                android:src="@drawable/star_outline"
+                android:layout_marginTop="5dp"/>
 
             <ImageView
                 android:id="@+id/first_prior"
@@ -64,11 +64,13 @@
             android:text="I'm a title"
             android:textColor="@color/white"
             android:textStyle="bold"
+            android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="55dp"
-            android:layout_marginEnd="92dp"/>
+            android:layout_marginEnd="92dp"
+            android:ellipsize="end"/>
 
         <TextView
             android:id="@+id/desc"
@@ -81,7 +83,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title"
-            android:layout_marginStart="55dp"/>
+            android:layout_marginStart="55dp"
+            android:maxLines="1"
+            android:ellipsize="end"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
