--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="red">#FFE10707</color>
     <color name="yellow">#FFEDB200</color>
     <color name="green">#FF228507</color>
+    <color name="purple">#7831EA</color>
+    <color name="orange">#E87428</color>
     <color name="back_night">#191919</color>
     <color name="back_day">#F3F3F3</color>
     <color name="gray">#686868</color>
