--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".StatisticsActivity"
-        android:background="?attr/colorPrimary">
-
+        android:background="?attr/colorPrimary"
+        android:paddingBottom="20dp">
         <TextView
             android:id="@+id/statistics_title"
             android:layout_width="wrap_content"
@@ -56,14 +56,101 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="5dp"/>
-                <!-- Круговая диаграмма по цветам -->
-                <org.eazegraph.lib.charts.PieChart
-                    android:id="@+id/colors_piechart"
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="15dp"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center">
+                    <!-- Круговая диаграмма по цветам -->
+                    <org.eazegraph.lib.charts.PieChart
+                        android:id="@+id/colors_piechart"
+                        android:layout_width="160dp"
+                        android:layout_height="160dp"
+                        android:layout_marginVertical="15dp"
+                        android:layout_marginEnd="20dp"
+                        app:egInnerPaddingColor="?attr/colorContainer"
+                        app:egValueTextColor="?attr/colorPrimaryVariant"
+                        app:egValueTextSize="16dp"
+                        app:egEmptyDataText="@string/no_information_text"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="6dp"
+                            android:gravity="center_vertical">
+                            <View
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:background="@color/blue"/>
+                            <TextView
+                                android:layout_marginStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/blue_btn"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="6dp"
+                            android:gravity="center_vertical">
+                            <View
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:background="@color/green"/>
+                            <TextView
+                                android:layout_marginStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/green_btn"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="6dp"
+                            android:gravity="center_vertical">
+                            <View
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:background="@color/yellow"/>
+                            <TextView
+                                android:layout_marginStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/yellow_btn"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="6dp"
+                            android:gravity="center_vertical">
+                            <View
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:background="@color/red"/>
+                            <TextView
+                                android:layout_marginStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/red_btn"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
 
@@ -97,13 +184,65 @@
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="5dp"/>
                 <!-- Круговая диаграмма по цветам -->
-                <org.eazegraph.lib.charts.PieChart
-                    android:id="@+id/tasks_piechart"
-                    android:layout_width="160dp"
-                    android:layout_height="160dp"
-                    android:layout_marginTop="15dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="15dp"/>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_gravity="center">
+                    <!-- Круговая диаграмма по цветам -->
+                    <org.eazegraph.lib.charts.PieChart
+                        android:id="@+id/tasks_piechart"
+                        android:layout_width="160dp"
+                        android:layout_height="160dp"
+                        android:layout_marginVertical="15dp"
+                        android:layout_marginEnd="20dp"
+                        app:egInnerPaddingColor="?attr/colorContainer"
+                        app:egValueTextColor="?attr/colorPrimaryVariant"
+                        app:egValueTextSize="16dp"
+                        app:egEmptyDataText="@string/no_information_text"/>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="6dp"
+                            android:gravity="center_vertical">
+                            <View
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:background="@color/purple"/>
+                            <TextView
+                                android:layout_marginStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/completed_text"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:layout_marginVertical="6dp"
+                            android:gravity="center_vertical">
+                            <View
+                                android:layout_width="22dp"
+                                android:layout_height="22dp"
+                                android:background="@color/orange"/>
+                            <TextView
+                                android:layout_marginStart="10dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/unfulfilled_text"
+                                android:textSize="16sp"
+                                android:textStyle="bold"/>
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
 
@@ -140,7 +279,7 @@
                     android:id="@+id/highestTaskDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2024-10-13"
+                    android:text="@string/no_information_text"
                     android:textColor="?attr/colorPrimaryVariant"
                     android:textSize="20sp"
                     android:layout_marginTop="10dp"
@@ -150,6 +289,7 @@
                     android:layout_marginBottom="15dp"/>
             </LinearLayout>
         </FrameLayout>
+
         <FrameLayout
             android:id="@+id/prior_group"
             android:layout_width="match_parent"
@@ -179,18 +319,96 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="5dp"/>
-                <TextView
-                    android:id="@+id/prior"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="2024-10-13"
-                    android:textColor="?attr/colorPrimaryVariant"
-                    android:textSize="20sp"
-                    android:layout_marginTop="10dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginBottom="15dp"/>
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="6dp"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star"
+                        android:backgroundTint="@color/blue"/>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star_outline"
+                        android:backgroundTint="@color/blue"/>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star_outline"
+                        android:backgroundTint="@color/blue"/>
+                    <TextView
+                        android:id="@+id/first_prior"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:text="0"
+                        android:textStyle="bold"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="6dp"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star"
+                        android:backgroundTint="@color/blue"/>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star"
+                        android:backgroundTint="@color/blue"/>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star_outline"
+                        android:backgroundTint="@color/blue"/>
+                    <TextView
+                        android:id="@+id/second_prior"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:text="0"
+                        android:textStyle="bold"
+                        android:textSize="20sp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginVertical="6dp"
+                    android:gravity="center_vertical">
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star"
+                        android:backgroundTint="@color/blue"/>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star"
+                        android:backgroundTint="@color/blue"/>
+                    <ImageView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:background="@drawable/star"
+                        android:backgroundTint="@color/blue"/>
+                    <TextView
+                        android:id="@+id/third_prior"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:text="0"
+                        android:textStyle="bold"
+                        android:textSize="20sp"/>
+                </LinearLayout>
             </LinearLayout>
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
